# libmpdclient

./: .gitignore  CMakeLists.txt  config.h.in  libmpdclient.pc.in
doc/: doxygen.conf.in
include/mpd/: version.h.in
